2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Removed code that calls ChatWindow
	* Banter/ConversationManager.cs: fixed up the events to pass the
	  ChatType

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/AccountManagement.cs: new method to get account by name
	* Banter/ConversationManager.cs: use new method for initiating and
	  added a method to add a conversation to the list
	* Banter/Conversation.cs: new constructor for initiating

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: 
	
	  Added ChatWindowManager and ChatType
	* Banter/ChatType.cs: New Enum to define types of chat
	* Banter/ChatWindowManager.cs: New Class to manage all chat windows
	* Banter/Application.cs: Removed InitiateChat calls and moved them into
	  ChatWindowManager
	* Banter/Person.cs: Added default ProviderUser property
	* Banter/ChatWindow.cs: Removed old constructor that took a
	  conversation object
	* Banter/Makefile.am: Added ChatType and ChatWindowManager files to
	  make

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/AccountManagement.cs: Added OnIncomingConversation event and
	  matching delegate

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: added new properties, events and methods 

2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Application.cs: Fixed lagging references to VideoWindow

2007-06-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added VideoView and removed VideoWindow
	* Banter/Account.cs, Banter/Application.cs, Banter/Conversation.cs:
	  Modified to use ChatWindow
	* Banter/VideoView.cs: new class to display video chat
	* Banter/ConversationManager.cs: Removed CreateVideoChat as they are
	  all the same now
	* Banter/ChatWindow.cs: Modified to hold a videoview
	* Banter/VideoWindow.cs: replaced by VideoView Widget
	* Banter/Makefile.am: Removed VideoWindow added VideoView
