@@ -184,10 +184,10 @@ namespace Banter
 		private void WebControlOpenUriHandler(object o, OpenUriArgs args)
 		{
 			if(args.AURI.StartsWith("rtc://TEXT_CHAT")) {
-				Application.Instance.InitiateChat(person);
+				ChatWindowManager.InitiateChat(person, ChatType.Text);
 			}
 			else if(args.AURI.StartsWith("rtc://VIDEO_CHAT")) {
-				Application.Instance.InitiateVideoChat(person);
+				ChatWindowManager.InitiateChat(person, ChatType.Video);
 			}
 
 			// set return to true so the web control doesn't attempt to handle the URI
